fix: phones: CSS refactor + top toolbar gaps

--- a/src/Styles/body.css
+++ b/src/Styles/body.css
@@ -104,37 +104,37 @@ body {
     --ntb-toolbar-height: 0px; /* default, prior to first calculation on render */
     --ntb-tbar-bottom-mb-phone: var(--cg-nt-tbar-bottom-mb-phone);
     --ntb-tbar-top-fade-mask: linear-gradient(to bottom, rgba(0, 0, 0, var(--view-top-fade-opacity)) 0%, #000000 calc(var(--view-header-height) + 12px));;
-    --ntb-tbar-top-header-mt-phone: 0px;
+    --ntb-tbar-top-header-mt-phone: var(--ntb-toolbar-height);
     --ntb-tbar-top-header-pt-phone: 0px;
     --ntb-tbar-top-spacing-md: var(--size-4-2);
-    --ntb-tbar-top-spacing: var(--size-4-2);
+    --ntb-tbar-top-spacing: 0px;
     --ntb-tbar-top-mt-phone: 0px;
     --ntb-tbar-top-pt-phone: var(--safe-area-inset-top);
     &.auto-full-screen {
         --ntb-tbar-bottom-mb-phone: calc(var(--cg-nt-tbar-bottom-mb-phone) + var(--navbar-height));
-        --ntb-tbar-top-header-mt-phone: var(--ntb-toolbar-height);
-        --ntb-tbar-top-spacing-md: calc(var(--view-header-height) + 16px);
         --ntb-tbar-top-spacing: calc(var(--view-header-height) + 16px);
-        &:not(.is-floating-nav) {
-            --ntb-tbar-top-spacing-md: var(--size-4-2);
-        }
+        --ntb-tbar-top-spacing-md: var(--size-4-2);
     }
     &.is-floating-nav {
         --ntb-tbar-bottom-mb-phone: calc(var(--cg-nt-tbar-bottom-mb-phone) + var(--navbar-height) + var(--safe-area-inset-bottom));
-        --ntb-tbar-top-spacing-md: var(--size-4-2);
-        --ntb-tbar-top-spacing: calc(var(--view-header-height) + 16px);
+        --ntb-tbar-top-spacing: 0px;
+        --ntb-tbar-top-spacing-md: calc(var(--view-header-height) + 16px);
+    }
+    &:not(.is-floating-nav) {
+        --ntb-tbar-top-spacing: var(--view-header-height);
+        --ntb-tbar-top-spacing-md: 0px;
         &:not(.auto-full-screen) {
-            --ntb-tbar-top-header-mt-phone: var(--ntb-toolbar-height);
-            --ntb-tbar-top-spacing-md: calc(var(--view-header-height) + 16px);
+            --ntb-tbar-top-header-mt-phone: 0px;
             --ntb-tbar-top-spacing: 0px;
         }
     }
     &.is-hidden-nav {
         --ntb-tbar-bottom-mb-phone: calc(var(--cg-nt-tbar-bottom-mb-phone) + var(--safe-area-inset-bottom));
-        --ntb-tbar-top-spacing: var(--size-4-2);
+        --ntb-tbar-top-spacing: 0px;
     }
     &.ntb-remove-view-header {
         --ntb-tbar-top-spacing: 0px;
+        --ntb-tbar-top-spacing-md: var(--size-4-2);
     }
     &.ntb-remove-nav {
         --ntb-tbar-bottom-mb-phone: calc(var(--cg-nt-tbar-bottom-mb-phone) + var(--safe-area-inset-bottom));
